<resources>
    <string name="app_name">Roma Wallpapers</string>
    <string name="FirstTitle">Forza Roma</string>
    <string name="emailHint">Email</string>
    <string name="userNameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="NameHint">Name</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="phoneHint">Phone</string>
    <string name="loginText">Login</string>
    <string name="RegisterText">Register</string>
    <string name="ORText">OR</string>
    <string name="FacebookText">Facebook</string>
    <string name="GoogleText">Google</string>
    <string name="RegisterFromLogin">Don\'t Having an account? Register Now</string>
    <string name="LoginFromRegister">Already have an account ?</string>
    <string name="recentWallpapers">Recent Wallpapers</string>
    <string name="favorite">Favorite</string>
    <string name="rate">Rate</string>
    <string name="shareThisApp">Share this app</string>
    <string name="aboutUs">About Us</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="wallpaper">Set As Wallpaper</string>
    <string name="invalidEmailOrPassword">invalid email address or password</string>
    <string name="invalidUsername">invalid username must be only Letters please try again</string>
    <string name="invalidCategoryName">invalid category name please try again</string>
    <string name="invalidCategoryImage">please add image</string>
    <string name="invalidEmail">invalid email address please try again</string>
    <string name="invalidPassword">invalid password must be 8 characters or more please try again</string>
    <string name="invalidConfirmPassword">password confirm must equal to password</string>
    <string name="invalidPhone">invalid phone must be 11 numbers please try again</string>
    <string name="error">Oops something went wrong</string>
    <string name="emailExist">email address already exists</string>
    <string name="logout">Logout</string>
    <string name="Administration">Administration</string>
    <string name="Categories">Categories</string>
    <string name="Category">Category</string>
    <string name="Images">Images</string>
    <string name="AddTitle">Add Admin</string>
    <string name="AddBtn">Add</string>
    <string name="addSuccessfully">Added Successfully</string>
    <string name="categoryTitle">Add Category</string>
    <string name="ImageTitle">Add Image</string>
    <string name="offlineText">No Image Available Now</string>
    <string name="invalidCategory">Please Choose Category</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">180992059401186</string>
    <string name="fb_login_protocol_scheme">fb180992059401186</string>
    <string name="add_widget">Add widget</string>
    <string name="addImage">Add Image</string>
    <string name="SignIn">Sign In</string>
    <string name="SaveUser">SaveUser</string>
    <string name="userID">userID</string>
    <string name="userEmail">userEmail</string>
    <string name="userName">userName</string>
    <string name="CategoryType">CategoryType</string>
    <string name="Recent">Recent</string>
    <string name="Image">Image</string>
    <string name="SaveImage">SaveImage</string>
    <string name="imageURL">imageURL</string>
    <string name="imageName">imageName</string>
    <string name="WallpaperSet">Wallpaper Set Successfully</string>
    <string name="WallpaperNotSet">Wallpaper Not Set</string>
    <string name="ImageSavedSuccessfully">Image Saved Successfully</string>
    <string name="addToFav">Added To Successfully</string>
    <string name="removeFromFav">Removed From Successfully</string>
    <string name="type0">0</string>
    <string name="type1">1</string>
    <string name="Users">Users</string>
    <string name="User">User</string>
    <string name="CategoryImage">Category Image</string>
    <string name="Gallery">Gallery</string>
    <string name="Photos">Photos/</string>
    <string name="Cancel">Cancel</string>
    <string name="SelectFile">Select File</string>
    <string name="imageType">image/*</string>
    <string name="AddNewImage">Add New Image</string>
    <string name="logicchippng">logicchip.png</string>
    <string name="imagepng">image/png</string>
    <string name="Shareimagevia">Share image via</string>
    <string name="Menu">Menu</string>
    <string name="Communicate">Communicate</string>
</resources>
