<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/recentWallpapers" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/unfavorite"
            android:title="@string/favorite" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/shareThisApp" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/aboutUs" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
